--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid py-3">
   <h1>I'm a beautiful Hanabi app!</h1>
+  <button (click)="joinRoom()"> create </button>
 </div>
 
 <router-outlet></router-outlet>
