--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid py-3">
-  <h1>I'm a beautiful Hanabi app!</h1>
-  <button (click)="joinRoom()"> create </button>
+  <h1>Hanabi app</h1>
+  <app-button [text] = "createRoomText" (clicked)="createRoom($event)"></app-button>
+  <h1>{{ debugText }}</h1>
 </div>
 
 <router-outlet></router-outlet>
