[WIP] Add dynamic routing to rooms

--- a/src/app/components/room-info-list/room-info-list.component.html
+++ b/src/app/components/room-info-list/room-info-list.component.html
@@ -1,3 +1,4 @@
-<p>Rooms</p>
-<app-room-info *ngFor="let room of roomList" [room] = "room"></app-room-info>
+<p>Rooms for {{playerName}}</p>
+<app-room-info *ngFor="let room of roomList" 
+    [room] = "room" [playerName] = "playerName"></app-room-info>
 <app-button [text] = "createRoomText" (clicked)="createNewRoom()"></app-button>
