--- a/src/app/components/room-info/room-info.component.html
+++ b/src/app/components/room-info/room-info.component.html
@@ -1,4 +1,4 @@
 <p>{{room?.id}}</p>
 <p>{{room?.players}}</p>
 <p>{{room?.isPublic}}</p>
-<app-button [text] = "joinRoomText"></app-button>
+<app-button [text] = "joinRoomText" (clicked)="joinRoom()"></app-button>
