--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,8 @@
 :host {
-    font-style: italic;
-  }
+  font-style: normal;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: aquamarine;
+  
+  color: blue
+}
   
