--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+:host {
+    font-style: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: aquamarine;
+    
+    color: blue
+  }
