Minor code cleanup with possible bug fix (fetching rooms)

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,4 @@
     <input [(ngModel)]="login" type="text" id="login" name="login" 
     required minlength="4" maxlength="20" size="10">
  </form>
- <h1>{{login}}</h1>
- <h1>{{debug}}</h1>
- <h1>{{isValid}}</h1>
- <h1>{{msg}}</h1>
+ <h1>{{errorMessage}}</h1>
