--- a/src/app/components/lobby/lobby.component.html
+++ b/src/app/components/lobby/lobby.component.html
@@ -1,5 +1,9 @@
-<div class="container-fluid py-3">
-    <h1>Hello, {{ userName }}!</h1>
-  {{state}}
-  <app-room-info-list [playerName]="userName"></app-room-info-list>
-</div>
+<body>
+  <main>
+    <div class="container-fluid py-3">
+      <h1>Hello, {{ userName }}!</h1>
+    <app-room-info-list [playerName]="userName"></app-room-info-list>
+    </div>
+  </main>
+</body>
+
