--- a/src/app/components/room-info-list/room-info-list.component.html
+++ b/src/app/components/room-info-list/room-info-list.component.html
@@ -1,4 +1,7 @@
-<p>Rooms for {{playerName}}</p>
+<h2>Available public rooms:</h2>
+<br>
+<ul>
 <app-room-info *ngFor="let room of roomList" 
     [room] = "room" [playerName] = "playerName"></app-room-info>
+</ul>
 <app-button [text] = "createRoomText" (clicked)="createNewRoom()"></app-button>
