--- a/src/app/components/room-info/room-info.component.html
+++ b/src/app/components/room-info/room-info.component.html
@@ -1,4 +1,8 @@
-<p>{{room?.id}}</p>
-<p>{{room?.players}}</p>
-<p>{{room?.isPublic}}</p>
-<app-button [text] = "joinRoomText" (clicked)="joinRoom()"></app-button>
+<body>
+    
+        <h2>Room {{room?.id}}</h2>
+        <p>Players in this room:</p>
+        <p>{{"[" + room?.players + "]"}}</p>
+        <app-button [text] = "joinRoomText" (clicked)="joinRoom()"></app-button>
+    
+</body>
