--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,4 +7,14 @@
         </form>
         <h1>{{errorMessage}}</h1>
     </main>
+    <select>
+        <option value="">--Please choose an option--</option>
+        <option value="dog">Dog</option>
+        <option value="cat">Cat</option>
+        <option value="hamster">Hamster</option>
+        <option value="parrot">Parrot</option>
+        <option value="spider">Spider</option>
+        <option value="goldfish">Goldfish</option>
+    </select>
+    
 </body>
