Create MockRoomComponent and graphics for it

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,5 +6,6 @@
             required minlength="4" maxlength="20" size="20" placeholder="Enter your name">
         </form>
         <h1>{{errorMessage}}</h1>
+        <button (click)="joinMockRoom()">Test room GUI</button>
     </main>
 </body>
