--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -51,8 +51,8 @@
                                         <button class="btn btn-primary dropdown-toggle me-2"  data-bs-toggle="dropdown">hint color</button>
                                         <div class="dropdown-menu">
                                             <div class="btn-group btn-group-lg">
-                                                <ng-container *ngFor = "let colorName of colors">
-                                                    <button [className]="getClassName(colorName)" (click)="hintCard(player, 'color', 2)">
+                                                <ng-container *ngFor = "let colorName of colors; let i = index">
+                                                    <button [className]="getClassName(colorName)" (click)="hintCard(player, 'color', i + 1)">
                                                         &#10003;
                                                     </button>
                                                 </ng-container>
