--- a/src/app/components/mock-room/mock-room.component.html
+++ b/src/app/components/mock-room/mock-room.component.html
@@ -68,37 +68,39 @@
         <div class="row p-4 g-4">
             <ng-container *ngFor = "let card of getCards(playerName); let i = index">
                 <div class="col-12 col-xl-6">
-                    <p class="h3">Card {{ i + 1 }}</p>
-                    <div class="row g-2 p-1">
-                        <div class="col-xl-6 col-lg-4 col-sm-6">
-                            <p class="h5">Possible ranks:</p>
-                            <div class="d-flex flex-row">
-                                <ng-container *ngFor = "let rank of card.rankKnowledge">
-                                    <div class="d-flex flex-column">
-                                        <button class="btn btn-primary btn-lg me-1" disabled="true">
-                                            {{ rank }}
-                                        </button>
-                                    </div>
+                    <div class="rounded border border-secondary p-3">
+                        <p class="h3">Card {{ i + 1 }}</p>
+                        <div class="row g-2">
+                            <div class="col-xl-6 col-lg-4 col-sm-6 p-1">
+                                <p class="h5">Possible ranks:</p>
+                                <div class="d-flex flex-row">
+                                    <ng-container *ngFor = "let rank of card.rankKnowledge">
+                                        <div class="d-flex flex-column">
+                                            <button class="btn btn-primary btn-lg me-1" disabled="true">
+                                                {{ rank }}
+                                            </button>
+                                        </div>
+                                    </ng-container>
+                                </div>
+                            </div>
+                            <div class="col-xl-6 col-lg-4 col-sm-6">
+                                <p class="h5">Possible colors:</p>
+                                <div class="d-flex flex-row">
+                                    <ng-container *ngFor = "let color of card.colorKnowledge">
+                                        <div class="d-flex flex-column">
+                                            <button [className]="getLgClassName(getColorName(color))" disabled="true">
+                                                O
+                                            </button>
+                                        </div>
+                                    </ng-container>
+                                </div>
+                            </div>
+                            <div class="col-xl-12 col-lg-4 col-sm-12 d-flex align-items-center">
+                                <ng-container *ngIf = "gameState?.currentPlayer === playerName">
+                                    <button class="btn btn-primary btn-lg me-3" (click)="playCard(card)">play</button>
+                                    <button class="btn btn-primary btn-lg me-3" (click)="discardCard(card)">discard</button>
                                 </ng-container>
                             </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-4 col-sm-6">
-                            <p class="h5">Possible colors:</p>
-                            <div class="d-flex flex-row">
-                                <ng-container *ngFor = "let color of card.colorKnowledge">
-                                    <div class="d-flex flex-column">
-                                        <button [className]="getLgClassName(getColorName(color))" disabled="true">
-                                            O
-                                        </button>
-                                    </div>
-                                </ng-container>
-                            </div>
-                        </div>
-                        <div class="col-xl-12 col-lg-4 col-sm-12 d-flex align-items-center">
-                            <ng-container *ngIf = "gameState?.currentPlayer === playerName">
-                                <button class="btn btn-primary btn-lg me-3" (click)="playCard(card)">play</button>
-                                <button class="btn btn-primary btn-lg me-3" (click)="discardCard(card)">discard</button>
-                            </ng-container>
                         </div>
                     </div>
                 </div>
