--- a/src/app/components/mock-room/mock-room.component.html
+++ b/src/app/components/mock-room/mock-room.component.html
@@ -15,9 +15,14 @@
                 <p class="h4 text-secondary">Lives: {{gameState.lifeTokens}}</p>
             </div>
         </div>
+        <div class="row px-4">
+            <div class="h4">
+                {{ lastActionMessage }}
+            </div>
+        </div>
     </div>
 </ng-container>
-<div class="container-fluid px-5">
+<div class="container-fluid px-3">
     <ng-container *ngIf = "gameState !== undefined">
         <div class = "row gy-4 py-4">
             <ng-container *ngFor = "let player of roomInfo?.players">
@@ -65,7 +70,7 @@
         </div>
         <br>
         <p class="h2 text-secondary">Your cards</p>
-        <div class="row p-4 g-4">
+        <div class="row g-4">
             <ng-container *ngFor = "let card of getCards(playerName); let i = index">
                 <div class="col-12 col-xl-6">
                     <div class="rounded border border-secondary p-3">
@@ -76,7 +81,7 @@
                                 <div class="d-flex flex-row">
                                     <ng-container *ngFor = "let rank of card.rankKnowledge">
                                         <div class="d-flex flex-column">
-                                            <button class="btn btn-primary btn-lg me-1" disabled="true">
+                                            <button class="btn btn-primary btn-lg me-1" style="pointer-events: none">
                                                 {{ rank }}
                                             </button>
                                         </div>
@@ -88,7 +93,7 @@
                                 <div class="d-flex flex-row">
                                     <ng-container *ngFor = "let color of card.colorKnowledge">
                                         <div class="d-flex flex-column">
-                                            <button [className]="getLgClassName(getColorName(color))" disabled="true">
+                                            <button [className]="getLgClassName(getColorName(color))">
                                                 O
                                             </button>
                                         </div>
