--- a/src/app/components/room-info-list/room-info-list.component.html
+++ b/src/app/components/room-info-list/room-info-list.component.html
@@ -1,7 +1,9 @@
-<h2>Available public rooms:</h2>
-<br>
-<ul>
-<app-room-info *ngFor="let room of roomList" 
-    [room] = "room" [playerName] = "playerName"></app-room-info>
-</ul>
-<app-button [text] = "createRoomText" (clicked)="createNewRoom()"></app-button>
+<div class="overflow-auto" style="max-height: 60%;">
+    <div class="row">
+        <app-room-info *ngFor="let room of roomList" 
+            [room] = "room" [playerName] = "playerName"></app-room-info>
+    </div>
+</div>
+<div class="col p-4">
+    <app-button [text] = "createRoomText" (clicked)="createNewRoom()"></app-button>
+</div>
