--- a/src/app/components/room-info/room-info.component.html
+++ b/src/app/components/room-info/room-info.component.html
@@ -1,8 +1,14 @@
-<body>
-    
-        <h2>Room {{room?.id}}</h2>
-        <p>Players in this room:</p>
-        <p>{{"[" + room?.players + "]"}}</p>
-        <app-button [text] = "joinRoomText" (clicked)="joinRoom()"></app-button>
-    
-</body>
+<div class="col p-2">
+    <div class="rounded border border-secondary p-2">
+        <div class="row px-4 py-2">
+            <div class="col-8">
+                <p class="h3 text-secondary">Room {{ room?.id }}</p>
+                <p class="h5">Players in this room:</p>
+                <p class="h5">{{ room?.players }}</p>
+            </div>
+            <div class="col-4 d-flex align-items-center justify-content-end">
+                <app-button [text] = "joinRoomText" (clicked)="joinRoom()"></app-button>
+            </div>
+        </div>
+    </div>
+</div>
