Fix lobby GUI - change mock selector to a normal one

--- a/src/app/components/lobby/lobby.component.html
+++ b/src/app/components/lobby/lobby.component.html
@@ -5,5 +5,5 @@
     <p class="h2 m-4">
         Available public rooms:
     </p>
-    <app-mock-room-info-list [playerName]="userName"></app-mock-room-info-list>
+    <app-room-info-list [playerName]="userName"></app-room-info-list>
 </div>
