Fix displaying scored cards

--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -32,7 +32,7 @@
                         </ng-container>
                         <ng-container *ngIf = "colorScore !== 0">
                             <div class="col">
-                                <img class="img-responsive" src="assets/images/{{i + 1}}{{colorScore}}.png">
+                                <img class="img-responsive" src="assets/images/{{i}}{{colorScore}}.png">
                             </div>
                         </ng-container>
                     </ng-container>
